--- a/baseframework/build.gradle
+++ b/baseframework/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -39,4 +43,21 @@ publish {
     version = '1.0.0'
     description = 'Super duper easy way to release your Android and other artifacts to bintray'
     website = "https://github.com/lock2fire/AppFrameworkLibrary"
+}
+
+
+task javadoc(type: Javadoc) {
+    options.encoding "UTF-8"
+    options.charSet 'UTF-8'
+    failOnError false
+}
+
+javadoc {
+    options {
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        author true
+        version true
+        links "http://docs.oracle.com/javase/7/docs/api"
+    }
 }
