--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId "com.yuxiao.buz.baseframework"
+        applicationId "com.yuxiao.buz.test"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
