--- a/baseframework/src/main/AndroidManifest.xml
+++ b/baseframework/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yuxiao.buz.baseframework.imageloader">
-
+    package="com.yuxiao.buz.baseframework">
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
